[gd_scene load_steps=6 format=3 uid="uid://c0p88flgb5dm6"]

[ext_resource type="PackedScene" uid="uid://n4ar5dwpcq83" path="res://gamelogic/Arena/beatbar_ui.tscn" id="1_71d1x"]
[ext_resource type="Script" path="res://gamelogic/TestScenes/beatbar_ui_rhythm_signal_test.gd" id="1_jtmr1"]
[ext_resource type="Script" path="res://gamelogic/Arena/rhythm.gd" id="2_vio2v"]
[ext_resource type="AudioStream" uid="uid://cwpgw8mr83pyh" path="res://music/For Whom the Knell Tolls.ogg" id="3_owds1"]
[ext_resource type="Theme" uid="uid://bl2wxp3u6kuhq" path="res://assets/control_theme.tres" id="4_s0ih0"]

[node name="Beatbar_UI_rhythm_signal_test" type="Node"]
script = ExtResource("1_jtmr1")

[node name="rhythm" type="Node" parent="."]
script = ExtResource("2_vio2v")
bpm = 140.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="rhythm"]
stream = ExtResource("3_owds1")
volume_db = -30.0

[node name="CanvasLayer" type="CanvasLayer" parent="rhythm"]

[node name="Beatbar_UI" parent="rhythm/CanvasLayer" instance=ExtResource("1_71d1x")]
position = Vector2(510, 447)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_s0ih0")

[node name="music start" type="Button" parent="Control"]
layout_mode = 0
offset_left = 852.0
offset_top = 112.0
offset_right = 1085.0
offset_bottom = 222.0
toggle_mode = true
text = "Start Music"

[node name="beat_count" type="Label" parent="Control"]
layout_mode = 0
offset_left = 862.0
offset_top = 345.0
offset_right = 1073.0
offset_bottom = 527.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="time" type="Label" parent="Control"]
layout_mode = 0
offset_left = 820.0
offset_top = 515.0
offset_right = 1119.0
offset_bottom = 697.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "0.00"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="toggled" from="Control/music start" to="rhythm" method="_on_music_start_toggled"]
